fixed comment z-index

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -58,6 +58,7 @@ code{
 }
 
 #SOHUCS{
+  position: relative;
   z-index: 1;
 }
 // ------show------
